feat: setup Decap CMS dan migrasi JSON

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <!-- Styling -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile-premium.css">
   <link rel="stylesheet" href="css/satoshi.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Great+Vibes&display=swap"
     rel="stylesheet">
