--- a/sections/emagz.html
+++ b/sections/emagz.html
@@ -1,20 +1,312 @@
-<section class="py-16">
-  <div class="max-w-6xl mx-auto px-6">
-    <div class="text-center mb-8">
-      <h2 class="text-3xl md:text-4xl font-extrabold text-white relative inline-block">
-        Elektro Magazine
-        <span class="absolute -bottom-3 left-1/2 transform -translate-x-1/2 w-20 h-1.5 bg-green-500 rounded-full"></span>
-      </h2>
-      <p class="text-gray-400 mt-4 text-sm md:text-base">Arus informasi himpunan dan kreativitas mahasiswa.</p>
-    </div>
-    <div id="emagz-cards-container" class="flex flex-wrap justify-center gap-10">
-      <p class="text-gray-400">Memuat edisi Emagz...</p>
+<style>
+  .emagz-section {
+    position: relative;
+    padding: clamp(36px, 7vh, 80px) 0;
+    overflow: hidden;
+  }
+  .emagz-section::before {
+    content: '';
+    position: absolute;
+    top: 0; left: 50%; transform: translateX(-50%);
+    width: min(600px, 100%); height: 280px;
+    background: radial-gradient(ellipse, rgba(15,188,109,0.06) 0%, transparent 70%);
+    pointer-events: none;
+  }
+
+  .emagz-inner {
+    max-width: 1100px; margin: 0 auto;
+    padding: 0 clamp(16px, 5vw, 48px);
+    display: flex; flex-direction: column; align-items: center;
+  }
+
+  .emagz-header {
+    text-align: center;
+    margin-bottom: clamp(24px, 4vh, 44px);
+    display: flex; flex-direction: column; align-items: center; gap: 10px;
+    opacity: 0; transform: translateY(20px);
+    transition: opacity 0.7s ease, transform 0.7s ease;
+  }
+  .emagz-header.is-visible { opacity: 1; transform: translateY(0); }
+
+  .emagz-eyebrow {
+    display: inline-flex; align-items: center; gap: 10px;
+    font-size: 0.68rem; letter-spacing: 0.22em;
+    text-transform: uppercase; color: #0fbc6d; font-weight: 700;
+  }
+  .emagz-eyebrow::before, .emagz-eyebrow::after {
+    content: ''; display: block; width: 20px; height: 1px;
+    background: #0fbc6d; opacity: 0.6;
+  }
+  .emagz-title {
+    font-size: clamp(1.75rem, 5vw, 3.2rem); font-weight: 900;
+    color: #fff; letter-spacing: -0.04em; line-height: 1; margin: 0;
+  }
+  .emagz-title em { font-style: normal; color: #0fbc6d; }
+  .emagz-subtitle {
+    font-size: clamp(0.8rem, 2vw, 0.92rem);
+    color: rgba(156,163,175,0.6); margin: 0; line-height: 1.6;
+    max-width: 480px; text-align: center;
+  }
+
+  /* Grid: flex wrap center — cocok untuk jumlah edisi yang dinamis */
+  .emagz-grid {
+    width: 100%;
+    display: flex; flex-wrap: wrap; justify-content: center;
+    gap: clamp(14px, 2.5vw, 24px);
+  }
+
+  /* ── CARD — portrait book style, DNA sama dengan .news-card ── */
+  .emagz-card {
+    position: relative; border-radius: 16px; overflow: hidden;
+    background: linear-gradient(145deg,
+      rgba(15,188,109,0.07) 0%, rgba(13,17,23,0.98) 35%,
+      rgba(13,17,23,0.98) 65%, rgba(15,188,109,0.04) 100%
+    );
+    border: 1px solid rgba(15,188,109,0.1);
+    box-shadow: 0 4px 24px rgba(0,0,0,0.45);
+    text-decoration: none; display: flex; flex-direction: column;
+    flex: 1 1 200px; max-width: 220px; min-width: 170px;
+    opacity: 0; transform: translateY(32px);
+    transition:
+      opacity 0.55s cubic-bezier(0.23,1,0.32,1),
+      transform 0.55s cubic-bezier(0.23,1,0.32,1),
+      border-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  .emagz-card.is-visible { opacity: 1; transform: translateY(0); }
+  .emagz-card:nth-child(1) { transition-delay: 0.05s; }
+  .emagz-card:nth-child(2) { transition-delay: 0.12s; }
+  .emagz-card:nth-child(3) { transition-delay: 0.19s; }
+  .emagz-card:nth-child(4) { transition-delay: 0.26s; }
+
+  .emagz-card::before {
+    content: ''; position: absolute; top: 0; left: 8%; right: 8%; height: 1px;
+    background: linear-gradient(90deg, transparent, rgba(15,188,109,0.35), transparent); z-index: 2;
+  }
+  .emagz-card:hover {
+    transform: translateY(-5px) !important;
+    border-color: rgba(15,188,109,0.28);
+    box-shadow: 0 16px 40px rgba(0,0,0,0.55), 0 0 24px rgba(15,188,109,0.07);
+  }
+  .emagz-card:active { transform: scale(0.97) !important; }
+
+  /* Cover — portrait ratio 2:3 */
+  .emagz-card-cover {
+    position: relative; width: 100%; aspect-ratio: 2/3; overflow: hidden; flex-shrink: 0;
+  }
+  .emagz-card-cover img {
+    width: 100%; height: 100%; object-fit: cover; filter: brightness(0.88) saturate(1.05);
+    transition: transform 0.5s cubic-bezier(0.23,1,0.32,1), filter 0.3s ease;
+  }
+  .emagz-card:hover .emagz-card-cover img { transform: scale(1.04); filter: brightness(0.98); }
+  .emagz-card-cover::after {
+    content: ''; position: absolute; bottom: 0; left: 0; right: 0; height: 45%;
+    background: linear-gradient(to top, rgba(13,17,23,0.82), transparent); pointer-events: none;
+  }
+
+  /* Edition badge di sudut cover */
+  .emagz-card-edition-badge {
+    position: absolute; top: 10px; right: 10px; z-index: 3;
+    padding: 3px 8px; border-radius: 20px;
+    font-size: 0.58rem; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase;
+    background: rgba(15,188,109,0.18); border: 1px solid rgba(15,188,109,0.35);
+    color: #0fbc6d; backdrop-filter: blur(8px);
+  }
+
+  .emagz-card-body {
+    padding: 12px 14px 16px;
+    display: flex; flex-direction: column; gap: 5px;
+  }
+  .emagz-card-meta { display: flex; align-items: center; gap: 6px; flex-wrap: wrap; }
+  .emagz-card-date { font-size: 0.63rem; color: rgba(156,163,175,0.5); }
+  .emagz-card-dot  { width: 2px; height: 2px; background: rgba(156,163,175,0.35); border-radius: 50%; }
+  .emagz-card-tag  {
+    font-size: 0.58rem; letter-spacing: 0.1em; text-transform: uppercase;
+    color: #0fbc6d; font-weight: 700; padding: 2px 6px;
+    background: rgba(15,188,109,0.1); border-radius: 20px; border: 1px solid rgba(15,188,109,0.18);
+  }
+  .emagz-card-title {
+    font-size: clamp(0.84rem, 2vw, 0.94rem); font-weight: 800;
+    color: rgba(255,255,255,0.9); line-height: 1.3; margin: 0;
+    display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden;
+    transition: color 0.2s ease;
+  }
+  .emagz-card:hover .emagz-card-title { color: #fff; }
+  .emagz-card-read {
+    display: inline-flex; align-items: center; gap: 5px; margin-top: 6px;
+    font-size: 0.7rem; color: rgba(15,188,109,0.6); font-weight: 600;
+    transition: color 0.2s ease, gap 0.2s ease;
+  }
+  .emagz-card:hover .emagz-card-read { color: #0fbc6d; gap: 8px; }
+
+  .emagz-footer {
+    margin-top: clamp(20px, 3vh, 36px); display: flex; justify-content: center;
+    opacity: 0; transform: translateY(16px);
+    transition: opacity 0.5s ease 0.3s, transform 0.5s ease 0.3s;
+  }
+  .emagz-footer.is-visible { opacity: 1; transform: translateY(0); }
+  .emagz-cta {
+    display: inline-flex; align-items: center; gap: 10px; padding: 11px 28px;
+    border: 1px solid rgba(255,255,255,0.13); border-radius: 50px;
+    color: rgba(255,255,255,0.7); font-size: 0.85rem; font-weight: 600;
+    text-decoration: none; letter-spacing: 0.02em; transition: all 0.25s ease;
+  }
+  .emagz-cta:hover { border-color: rgba(15,188,109,0.4); color: #0fbc6d; background: rgba(15,188,109,0.05); }
+
+  .emagz-skel {
+    background: rgba(255,255,255,0.04); border-radius: 6px;
+    animation: emagzSkel 1.6s ease-in-out infinite;
+  }
+  @keyframes emagzSkel { 0%,100%{opacity:.3} 50%{opacity:.6} }
+
+  /* Mobile: min 2 kolom, card lebih kompak */
+  @media (max-width: 479px) {
+    .emagz-card { flex: 1 1 calc(50% - 12px); max-width: calc(50% - 6px); min-width: 0; }
+  }
+  @media (min-width: 480px) and (max-width: 768px) {
+    .emagz-card { flex: 1 1 calc(33% - 14px); max-width: calc(33% - 10px); min-width: 130px; }
+  }
+
+  /* ══ OVERRIDE: kartu yang di-generate emagz.js (Tailwind classes) ══ */
+  #emagz-cards-container > div,
+  #emagz-cards-container > a {
+    position: relative;
+    border-radius: 16px !important;
+    overflow: hidden !important;
+    background: linear-gradient(145deg,
+      rgba(15,188,109,0.07) 0%,
+      rgba(13,17,23,0.98) 35%,
+      rgba(13,17,23,0.98) 65%,
+      rgba(15,188,109,0.04) 100%
+    ) !important;
+    border: 1px solid rgba(15,188,109,0.1) !important;
+    box-shadow: 0 4px 24px rgba(0,0,0,0.45) !important;
+    text-decoration: none;
+    transition: transform 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease !important;
+    opacity: 0;
+    transform: translateY(28px);
+    animation: emagzCardIn 0.55s cubic-bezier(0.23,1,0.32,1) forwards;
+  }
+  #emagz-cards-container > div:nth-child(1),
+  #emagz-cards-container > a:nth-child(1) { animation-delay: 0.05s; }
+  #emagz-cards-container > div:nth-child(2),
+  #emagz-cards-container > a:nth-child(2) { animation-delay: 0.13s; }
+  #emagz-cards-container > div:nth-child(3),
+  #emagz-cards-container > a:nth-child(3) { animation-delay: 0.21s; }
+  #emagz-cards-container > div:nth-child(4),
+  #emagz-cards-container > a:nth-child(4) { animation-delay: 0.29s; }
+
+  @keyframes emagzCardIn {
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  /* Garis aksen tipis di atas card */
+  #emagz-cards-container > div::before,
+  #emagz-cards-container > a::before {
+    content: '';
+    position: absolute;
+    top: 0; left: 8%; right: 8%; height: 1px;
+    background: linear-gradient(90deg, transparent, rgba(15,188,109,0.35), transparent);
+    z-index: 2;
+    pointer-events: none;
+  }
+
+  #emagz-cards-container > div:hover,
+  #emagz-cards-container > a:hover {
+    transform: translateY(-5px) !important;
+    border-color: rgba(15,188,109,0.28) !important;
+    box-shadow: 0 16px 40px rgba(0,0,0,0.55), 0 0 24px rgba(15,188,109,0.07) !important;
+  }
+
+  /* Hapus background bawaan Tailwind dari dalam kartu */
+  #emagz-cards-container .bg-gray-800,
+  #emagz-cards-container .bg-gray-900 {
+    background: transparent !important;
+  }
+
+  /* Teks di dalam kartu */
+  #emagz-cards-container h3      { color: rgba(255,255,255,0.92) !important; }
+  #emagz-cards-container p       { color: rgba(156,163,175,0.75) !important; }
+  #emagz-cards-container .text-green-400 { color: #0fbc6d !important; }
+  #emagz-cards-container .text-gray-400  { color: rgba(156,163,175,0.7) !important; }
+
+  /* Badge edisi di pojok cover */
+  #emagz-cards-container .text-\[10px\] {
+    font-size: 0.6rem !important;
+    background: rgba(15,188,109,0.18) !important;
+    border: 1px solid rgba(15,188,109,0.35) !important;
+    color: #0fbc6d !important;
+    backdrop-filter: blur(8px) !important;
+  }
+
+  /* Tombol "Baca Sekarang" di dalam kartu */
+  #emagz-cards-container a[href*="emagz-reader"] {
+    background: rgba(15,188,109,0.12) !important;
+    border: 1px solid rgba(15,188,109,0.25) !important;
+    color: rgba(255,255,255,0.85) !important;
+    border-radius: 8px !important;
+    transition: background 0.2s ease, color 0.2s ease !important;
+  }
+  #emagz-cards-container a[href*="emagz-reader"]:hover {
+    background: rgba(15,188,109,0.28) !important;
+    color: #fff !important;
+  }
+</style>
+
+<section class="emagz-section">
+  <div class="emagz-inner">
+    <div class="emagz-header">
+      <span class="emagz-eyebrow">Publikasi HMTE</span>
+      <h2 class="emagz-title">Elektro <em>Magazine</em></h2>
+      <p class="emagz-subtitle">Arus informasi himpunan dan kreativitas mahasiswa.</p>
     </div>
 
-    <div id="emagz-more-link" class="mt-10 text-center hidden">
-      <a href="/page/emagz/emagz.html" class="inline-block px-8 py-3 bg-gray-800 text-white font-semibold rounded-full border border-gray-600 hover:bg-green-600 hover:border-green-500 hover:text-white transition-all duration-300 shadow-lg">
-        Baca Lainnya <i class="fas fa-arrow-right ml-2"></i>
+    <div id="emagz-cards-container" class="emagz-grid">
+      <!-- Skeleton -->
+      <div class="emagz-card is-visible"><div class="emagz-card-cover" style="aspect-ratio:2/3;"><div class="emagz-skel" style="width:100%;height:100%;"></div></div><div class="emagz-card-body" style="gap:8px;"><div class="emagz-skel" style="height:8px;width:40%;"></div><div class="emagz-skel" style="height:12px;width:85%;"></div></div></div>
+      <div class="emagz-card is-visible"><div class="emagz-card-cover" style="aspect-ratio:2/3;"><div class="emagz-skel" style="width:100%;height:100%;"></div></div><div class="emagz-card-body" style="gap:8px;"><div class="emagz-skel" style="height:8px;width:40%;"></div><div class="emagz-skel" style="height:12px;width:80%;"></div></div></div>
+      <div class="emagz-card is-visible"><div class="emagz-card-cover" style="aspect-ratio:2/3;"><div class="emagz-skel" style="width:100%;height:100%;"></div></div><div class="emagz-card-body" style="gap:8px;"><div class="emagz-skel" style="height:8px;width:40%;"></div><div class="emagz-skel" style="height:12px;width:88%;"></div></div></div>
+    </div>
+
+    <div id="emagz-more-link" class="emagz-footer hidden">
+      <a href="/page/emagz/emagz.html" class="emagz-cta">
+        Baca Lainnya <i class="fas fa-arrow-right"></i>
       </a>
     </div>
   </div>
 </section>
+
+<script>
+(function () {
+  function initEmagzAnim() {
+    const targets = document.querySelectorAll('.emagz-header, #emagz-cards-container .emagz-card, .emagz-footer');
+    if (!targets.length) return;
+    const obs = new IntersectionObserver((entries) => {
+      entries.forEach((e) => { if (e.isIntersecting) { e.target.classList.add('is-visible'); obs.unobserve(e.target); } });
+    }, { threshold: 0.08, rootMargin: '0px 0px -40px 0px' });
+    targets.forEach((el) => { el.classList.remove('is-visible'); obs.observe(el); });
+  }
+  window.__components = window.__components || {};
+  window.__components['emagz'] = { init: initEmagzAnim };
+  window.initEmagzAnimations = initEmagzAnim;
+})();
+</script>
+
+<!--
+  FORMAT CARD untuk emagz.js:
+  <a href="..." class="emagz-card">
+    <div class="emagz-card-cover">
+      <span class="emagz-card-edition-badge">Vol. 12</span>
+      <img src="..." alt="...">
+    </div>
+    <div class="emagz-card-body">
+      <div class="emagz-card-meta">
+        <span class="emagz-card-date">2025</span>
+        <span class="emagz-card-dot"></span>
+        <span class="emagz-card-tag">E-Magz</span>
+      </div>
+      <h3 class="emagz-card-title">Judul Edisi</h3>
+      <span class="emagz-card-read">Baca Sekarang <i class="fas fa-arrow-right"></i></span>
+    </div>
+  </a>
+  Setelah inject: window.initEmagzAnimations?.()
+-->
