--- a/sections/ongoing.html
+++ b/sections/ongoing.html
@@ -1,25 +1,292 @@
-<section class="py-16 bg-gray-900">
-  <style>
-    section.bg-gray-900 {
-      background-color: transparent !important;
-    }
-  </style>
+<style>
+  @keyframes liveBlink {
+    0%,100% { opacity: 1; }
+    50%      { opacity: 0.3; }
+  }
+  @keyframes skelPulse3 {
+    0%,100% { opacity: 0.3; }
+    50%      { opacity: 0.6; }
+  }
 
-  <div class="max-w-6xl mx-auto px-6">
-    <div class="text-center mb-8">
-      <h2 class="text-3xl md:text-4xl font-extrabold text-white relative inline-block">
-        Acara On-going
-        <span class="absolute -bottom-3 left-1/2 transform -translate-x-1/2 w-20 h-1.5 bg-green-500 rounded-full"></span>
-      </h2>
-      <p class="text-gray-400 mt-4 text-sm md:text-base">Event dan Acara HMTE terdekat.</p>
+  .ongoing-section {
+    position: relative;
+    padding: clamp(36px, 7vh, 80px) 0;
+    overflow: hidden;
+  }
+  .ongoing-section::before {
+    content: '';
+    position: absolute;
+    top: 20%; right: -80px;
+    width: 350px; height: 350px;
+    background: radial-gradient(circle, rgba(15,188,109,0.05) 0%, transparent 65%);
+    pointer-events: none;
+  }
+
+  .ongoing-inner {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 clamp(16px, 5vw, 48px);
+    display: flex; flex-direction: column; align-items: center;
+  }
+
+  /* ── HEADER ── */
+  .ongoing-header {
+    text-align: center;
+    margin-bottom: clamp(24px, 4vh, 44px);
+    display: flex; flex-direction: column; align-items: center;
+    gap: 10px;
+    opacity: 0; transform: translateY(20px);
+    transition: opacity 0.7s ease, transform 0.7s ease;
+  }
+  .ongoing-header.is-visible { opacity: 1; transform: translateY(0); }
+
+  .ongoing-eyebrow {
+    display: inline-flex; align-items: center; gap: 10px;
+    font-size: 0.68rem; letter-spacing: 0.22em;
+    text-transform: uppercase; color: #0fbc6d; font-weight: 700;
+  }
+  .ongoing-eyebrow::before, .ongoing-eyebrow::after {
+    content: ''; display: block;
+    width: 20px; height: 1px; background: #0fbc6d; opacity: 0.6;
+  }
+  .ongoing-title {
+    font-size: clamp(1.75rem, 5vw, 3.2rem);
+    font-weight: 900; color: #fff;
+    letter-spacing: -0.04em; line-height: 1; margin: 0;
+  }
+  .ongoing-title em { font-style: normal; color: #0fbc6d; }
+  .ongoing-subtitle {
+    font-size: clamp(0.8rem, 2vw, 0.92rem);
+    color: rgba(156,163,175,0.6); margin: 0; line-height: 1.6;
+    max-width: 480px; text-align: center;
+  }
+
+  /* ── GRID: auto-fit ── */
+  .ongoing-grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: clamp(12px, 2.5vw, 22px);
+  }
+
+  /* ── CARD ── */
+  .ongoing-card {
+    position: relative; border-radius: 16px; overflow: hidden;
+    background: linear-gradient(145deg,
+      rgba(15,188,109,0.07) 0%, rgba(13,17,23,0.98) 35%,
+      rgba(13,17,23,0.98) 65%, rgba(15,188,109,0.04) 100%
+    );
+    border: 1px solid rgba(15,188,109,0.1);
+    box-shadow: 0 4px 24px rgba(0,0,0,0.4);
+    text-decoration: none; display: flex; flex-direction: column;
+    opacity: 0; transform: translateY(32px);
+    transition:
+      opacity 0.55s cubic-bezier(0.23,1,0.32,1),
+      transform 0.55s cubic-bezier(0.23,1,0.32,1),
+      border-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  .ongoing-card.is-visible { opacity: 1; transform: translateY(0); }
+  .ongoing-card:nth-child(1) { transition-delay: 0.05s; }
+  .ongoing-card:nth-child(2) { transition-delay: 0.15s; }
+  .ongoing-card:nth-child(3) { transition-delay: 0.25s; }
+
+  .ongoing-card::before {
+    content: ''; position: absolute; top: 0; left: 8%; right: 8%; height: 1px;
+    background: linear-gradient(90deg, transparent, rgba(15,188,109,0.4), transparent);
+    z-index: 2;
+  }
+  .ongoing-card:hover {
+    transform: translateY(-5px) !important;
+    border-color: rgba(15,188,109,0.3);
+    box-shadow: 0 16px 40px rgba(0,0,0,0.5), 0 0 24px rgba(15,188,109,0.08);
+  }
+  .ongoing-card:active { transform: scale(0.98) !important; }
+
+  /* ── GAMBAR ── */
+  .ongoing-card-img {
+    position: relative; height: clamp(150px, 16vw, 200px);
+    overflow: hidden; flex-shrink: 0;
+  }
+  .ongoing-card-img img {
+    width: 100%; height: 100%; object-fit: cover;
+    filter: brightness(0.82) saturate(1.05);
+    transition: transform 0.5s cubic-bezier(0.23,1,0.32,1), filter 0.3s ease;
+  }
+  .ongoing-card:hover .ongoing-card-img img { transform: scale(1.05); filter: brightness(0.95); }
+  .ongoing-card-img::after {
+    content: ''; position: absolute; bottom: 0; left: 0; right: 0; height: 55%;
+    background: linear-gradient(to top, rgba(13,17,23,0.8), transparent); pointer-events: none;
+  }
+  .ongoing-badge {
+    position: absolute; top: 12px; right: 12px; z-index: 3;
+    display: inline-flex; align-items: center; gap: 5px;
+    padding: 4px 10px;
+    background: rgba(15,188,109,0.15); border: 1px solid rgba(15,188,109,0.35);
+    border-radius: 20px; font-size: 0.6rem; font-weight: 700;
+    letter-spacing: 0.1em; text-transform: uppercase; color: #0fbc6d;
+    backdrop-filter: blur(8px);
+  }
+  .ongoing-badge-dot {
+    width: 5px; height: 5px; background: #0fbc6d; border-radius: 50%;
+    box-shadow: 0 0 6px #0fbc6d;
+    animation: liveBlink 1.8s ease-in-out infinite;
+  }
+
+  /* ── BODY ── */
+  .ongoing-card-body {
+    padding: clamp(12px, 2vw, 18px);
+    display: flex; flex-direction: column; gap: 8px; flex: 1;
+  }
+  .ongoing-card-meta { display: flex; align-items: center; gap: 6px; flex-wrap: wrap; }
+  .ongoing-card-date {
+    font-size: 0.65rem; color: rgba(156,163,175,0.5);
+    display: flex; align-items: center; gap: 4px;
+  }
+  .ongoing-card-date i { color: rgba(15,188,109,0.6); font-size: 0.7rem; }
+  .ongoing-card-tag {
+    font-size: 0.58rem; letter-spacing: 0.1em; text-transform: uppercase;
+    color: #0fbc6d; font-weight: 700; padding: 2px 6px;
+    background: rgba(15,188,109,0.1); border-radius: 20px;
+    border: 1px solid rgba(15,188,109,0.18);
+  }
+  .ongoing-card-title {
+    font-size: clamp(0.88rem, 2vw, 1rem); font-weight: 800;
+    color: rgba(255,255,255,0.92); line-height: 1.35; margin: 0;
+    display: -webkit-box; -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; overflow: hidden;
+    transition: color 0.2s ease;
+  }
+  .ongoing-card:hover .ongoing-card-title { color: #fff; }
+  .ongoing-card-desc {
+    font-size: clamp(0.76rem, 1.5vw, 0.82rem);
+    color: rgba(156,163,175,0.5); line-height: 1.6; margin: 0;
+    display: -webkit-box; -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; overflow: hidden;
+  }
+  .ongoing-card-info {
+    display: flex; align-items: center; gap: 5px;
+    font-size: 0.68rem; color: rgba(156,163,175,0.45);
+    margin-top: auto; padding-top: 8px;
+    border-top: 1px solid rgba(255,255,255,0.05);
+  }
+  .ongoing-card-info i { color: rgba(15,188,109,0.5); }
+
+  /* ── CTA ── */
+  .ongoing-footer {
+    margin-top: clamp(20px, 3vh, 36px);
+    display: flex; justify-content: center;
+    opacity: 0; transform: translateY(16px);
+    transition: opacity 0.5s ease 0.3s, transform 0.5s ease 0.3s;
+  }
+  .ongoing-footer.is-visible { opacity: 1; transform: translateY(0); }
+  .ongoing-cta {
+    display: inline-flex; align-items: center; gap: 10px;
+    padding: 11px 28px; border: 1px solid rgba(255,255,255,0.13);
+    border-radius: 50px; color: rgba(255,255,255,0.7);
+    font-size: 0.85rem; font-weight: 600; text-decoration: none;
+    letter-spacing: 0.02em; transition: all 0.25s ease;
+  }
+  .ongoing-cta:hover { border-color: rgba(15,188,109,0.4); color: #0fbc6d; background: rgba(15,188,109,0.05); }
+
+  /* ── SKELETON ── */
+  .ongoing-skel {
+    background: rgba(255,255,255,0.04); border-radius: 6px;
+    animation: skelPulse3 1.6s ease-in-out infinite;
+  }
+
+  /* ══ MOBILE ≤ 479px ══ */
+  @media (max-width: 479px) {
+    .ongoing-grid { grid-template-columns: 1fr; gap: 12px; }
+    .ongoing-card-img { height: 175px !important; }
+  }
+
+  /* ══ TABLET 480–768px: 2 kolom ══ */
+  @media (min-width: 480px) and (max-width: 768px) {
+    .ongoing-grid { grid-template-columns: 1fr 1fr; gap: 14px; }
+    .ongoing-card:first-child { grid-column: 1 / -1; }
+    .ongoing-card-img { height: 160px !important; }
+  }
+</style>
+
+<section class="ongoing-section">
+  <div class="ongoing-inner">
+
+    <div class="ongoing-header">
+      <span class="ongoing-eyebrow">Kegiatan HMTE</span>
+      <h2 class="ongoing-title">Acara <em>On-going</em></h2>
+      <p class="ongoing-subtitle">Event dan acara HMTE Unsoed yang sedang berlangsung.</p>
     </div>
 
-    <div id="home-ongoing-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-center"></div>
+    <div id="home-ongoing-container" class="ongoing-grid">
+      <!-- Skeleton -->
+      <div class="ongoing-card is-visible">
+        <div class="ongoing-card-img"><div class="ongoing-skel" style="width:100%;height:100%;"></div></div>
+        <div class="ongoing-card-body" style="gap:10px;">
+          <div class="ongoing-skel" style="height:9px;width:30%;"></div>
+          <div class="ongoing-skel" style="height:14px;width:88%;"></div>
+          <div class="ongoing-skel" style="height:9px;width:65%;"></div>
+        </div>
+      </div>
+      <div class="ongoing-card is-visible">
+        <div class="ongoing-card-img"><div class="ongoing-skel" style="width:100%;height:100%;"></div></div>
+        <div class="ongoing-card-body" style="gap:10px;">
+          <div class="ongoing-skel" style="height:9px;width:30%;"></div>
+          <div class="ongoing-skel" style="height:14px;width:80%;"></div>
+        </div>
+      </div>
+      <div class="ongoing-card is-visible">
+        <div class="ongoing-card-img"><div class="ongoing-skel" style="width:100%;height:100%;"></div></div>
+        <div class="ongoing-card-body" style="gap:10px;">
+          <div class="ongoing-skel" style="height:9px;width:30%;"></div>
+          <div class="ongoing-skel" style="height:14px;width:85%;"></div>
+        </div>
+      </div>
+    </div>
 
-    <div class="mt-10 text-center">
-      <a href="/page/event/event.html" class="inline-block px-8 py-3 bg-gray-800 text-white font-semibold rounded-full border border-gray-600 hover:bg-green-600 hover:border-green-500 hover:text-white transition-all duration-300 shadow-lg">
-        Lihat Semua Kegiatan <i class="fas fa-arrow-right ml-2"></i>
+    <div class="ongoing-footer">
+      <a href="/page/event/event.html" class="ongoing-cta">
+        Lihat Semua Kegiatan <i class="fas fa-arrow-right"></i>
       </a>
     </div>
+
   </div>
 </section>
+
+<script>
+(function () {
+  function initOngoingAnim() {
+    const targets = document.querySelectorAll(
+      '.ongoing-header, #home-ongoing-container .ongoing-card, .ongoing-footer'
+    );
+    if (!targets.length) return;
+    const obs = new IntersectionObserver((entries) => {
+      entries.forEach((e) => {
+        if (e.isIntersecting) { e.target.classList.add('is-visible'); obs.unobserve(e.target); }
+      });
+    }, { threshold: 0.08, rootMargin: '0px 0px -40px 0px' });
+    targets.forEach((el) => { el.classList.remove('is-visible'); obs.observe(el); });
+  }
+
+  window.__components = window.__components || {};
+  window.__components['ongoing'] = { init: initOngoingAnim };
+})();
+</script>
+
+<!--
+  ⚠️ FORMAT CARD untuk JS generator:
+  <a href="..." class="ongoing-card">
+    <div class="ongoing-card-img">
+      <span class="ongoing-badge"><span class="ongoing-badge-dot"></span>On-going</span>
+      <img src="..." alt="...">
+    </div>
+    <div class="ongoing-card-body">
+      <div class="ongoing-card-meta">
+        <span class="ongoing-card-date"><i class="ri-calendar-line"></i> 21 Nov 2025</span>
+        <span class="ongoing-card-tag">Internal</span>
+      </div>
+      <h3 class="ongoing-card-title">Nama Acara</h3>
+      <p class="ongoing-card-desc">Deskripsi singkat.</p>
+      <div class="ongoing-card-info"><i class="ri-map-pin-line"></i> Lokasi</div>
+    </div>
+  </a>
+-->
