--- a/sections/podcast.html
+++ b/sections/podcast.html
@@ -1,52 +1,129 @@
-<!-- PODCAST -->
-<section class="py-16">
-  <div class="max-w-6xl mx-auto px-6">
-    <div class="text-center mb-8">
-      <h2 class="text-3xl md:text-4xl font-extrabold text-white relative inline-block">
-        Podcast
-        <span class="absolute -bottom-3 left-1/2 transform -translate-x-1/2 w-20 h-1.5 bg-green-500 rounded-full"></span>
-      </h2>
-      <p class="text-gray-400 mt-4 text-sm md:text-base">POTEK (Podcast Teknik Elektro).</p>
-    </div>
-    <div class="flex flex-wrap justify-center gap-6">
-      <!-- Card Podcast 1 -->
-      <a
-        href="https://www.youtube.com/watch?v=tcTy54pZHEQ"
-        target="_blank"
-        class="relative w-[320px] md:w-[360px] h-[200px] md:h-[220px] rounded-lg overflow-hidden shadow-lg group cursor-pointer border-2 border-transparent hover:border-green-800 hover:shadow-[0_0_15px_rgba(34,197,94,0.6)] bg-black flex items-center justify-center"
-      >
-        <!-- Video iframe -->
-        <iframe
-          class="w-full h-full"
-          src="https://www.youtube.com/embed/tcTy54pZHEQ?controls=1&rel=0&modestbranding=1"
-          title="POTEK SEASON 4 - EPS.5 Menembus Batas Inovasi: Cerita di Balik Soedirman Robotic Team"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        >
-        </iframe>
+<style>
+  .podcast-section {
+    position: relative;
+    padding: clamp(36px, 7vh, 80px) 0;
+    overflow: hidden;
+  }
+  .podcast-section::before {
+    content: '';
+    position: absolute;
+    top: 0; left: 50%; transform: translateX(-50%);
+    width: min(600px, 100%); height: 280px;
+    background: radial-gradient(ellipse, rgba(15,188,109,0.05) 0%, transparent 70%);
+    pointer-events: none;
+  }
 
-        <!-- Overlay title -->
-        <div class="absolute inset-0 bg-black/30 flex items-end p-3 text-white font-semibold text-sm z-10">POTEK SEASON 4 - EPS.5 Menembus Batas Inovasi: Cerita di Balik Soedirman Robotic Team</div>
-      </a>
+  .podcast-inner {
+    max-width: 900px; margin: 0 auto;
+    padding: 0 clamp(16px, 5vw, 48px);
+    display: flex; flex-direction: column; align-items: center;
+  }
 
-      <!-- Tambahkan card lain -->
-      <a
-        href="https://www.youtube.com/watch?v=tI45_FthHds"
-        target="_blank"
-        class="relative w-[320px] md:w-[360px] h-[200px] md:h-[220px] rounded-lg overflow-hidden shadow-lg group cursor-pointer border-2 border-transparent hover:border-green-800 hover:shadow-[0_0_15px_rgba(34,197,94,0.6)] bg-black flex items-center justify-center"
-      >
-        <iframe
-          class="w-full h-full"
-          src="https://www.youtube.com/embed/tI45_FthHds?controls=1&rel=0&modestbranding=1"
-          title="POTEK SEASON 4 - EPS.4 SATU ARUS, BANYAK CERITA."
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        >
-        </iframe>
-        <div class="absolute inset-0 bg-black/30 flex items-end p-3 text-white font-semibold text-sm z-10">POTEK SEASON 4 - EPS.4 SATU ARUS, BANYAK CERITA.</div>
-      </a>
+  .podcast-header {
+    text-align: center;
+    margin-bottom: clamp(24px, 4vh, 44px);
+    display: flex; flex-direction: column; align-items: center; gap: 10px;
+    opacity: 0; transform: translateY(20px);
+    transition: opacity 0.7s ease, transform 0.7s ease;
+  }
+  .podcast-header.is-visible { opacity: 1; transform: translateY(0); }
+
+  .podcast-eyebrow {
+    display: inline-flex; align-items: center; gap: 10px;
+    font-size: 0.68rem; letter-spacing: 0.22em;
+    text-transform: uppercase; color: #0fbc6d; font-weight: 700;
+  }
+  .podcast-eyebrow::before, .podcast-eyebrow::after {
+    content: ''; display: block; width: 20px; height: 1px;
+    background: #0fbc6d; opacity: 0.6;
+  }
+  .podcast-title {
+    font-size: clamp(1.75rem, 5vw, 3.2rem); font-weight: 900;
+    color: #fff; letter-spacing: -0.04em; line-height: 1; margin: 0;
+  }
+  .podcast-title em { font-style: normal; color: #0fbc6d; }
+  .podcast-subtitle {
+    font-size: clamp(0.8rem, 2vw, 0.92rem);
+    color: rgba(156,163,175,0.6); margin: 0; line-height: 1.6;
+    max-width: 400px; text-align: center;
+  }
+
+  /* Grid: auto-fit min 280px */
+  .podcast-grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: clamp(14px, 2.5vw, 24px);
+  }
+
+  .podcast-card {
+    position: relative; border-radius: 16px; overflow: hidden;
+    background: linear-gradient(145deg,
+      rgba(15,188,109,0.07) 0%, rgba(13,17,23,0.98) 35%,
+      rgba(13,17,23,0.98) 65%, rgba(15,188,109,0.04) 100%
+    );
+    border: 1px solid rgba(15,188,109,0.1);
+    box-shadow: 0 4px 24px rgba(0,0,0,0.45);
+    aspect-ratio: 16/9;
+    opacity: 0; transform: translateY(28px);
+    transition: opacity 0.55s cubic-bezier(0.23,1,0.32,1),
+      transform 0.55s cubic-bezier(0.23,1,0.32,1),
+      border-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  .podcast-card.is-visible { opacity: 1; transform: translateY(0); }
+  .podcast-card:nth-child(1) { transition-delay: 0.05s; }
+  .podcast-card:nth-child(2) { transition-delay: 0.15s; }
+  .podcast-card::before {
+    content: ''; position: absolute; top: 0; left: 8%; right: 8%; height: 1px;
+    background: linear-gradient(90deg, transparent, rgba(15,188,109,0.35), transparent);
+    z-index: 2; pointer-events: none;
+  }
+  .podcast-card:hover {
+    border-color: rgba(15,188,109,0.28);
+    box-shadow: 0 16px 40px rgba(0,0,0,0.55), 0 0 24px rgba(15,188,109,0.07);
+    transform: translateY(-4px) !important;
+  }
+
+  .podcast-card iframe { width: 100%; height: 100%; border: none; display: block; }
+
+  /* Mobile: 1 kolom */
+  @media (max-width: 540px) {
+    .podcast-grid { grid-template-columns: 1fr; }
+  }
+</style>
+
+<section class="podcast-section">
+  <div class="podcast-inner">
+
+    <div class="podcast-header">
+      <span class="podcast-eyebrow">Media HMTE</span>
+      <h2 class="podcast-title">Pod<em>cast</em></h2>
+      <p class="podcast-subtitle">POTEK — Podcast Teknik Elektro Unsoed.</p>
     </div>
+
+    <div class="podcast-grid">
+      <div class="podcast-card">
+        <iframe src="https://www.youtube.com/embed/tcTy54pZHEQ" title="Podcast 1" allowfullscreen loading="lazy"></iframe>
+      </div>
+      <div class="podcast-card">
+        <iframe src="https://www.youtube.com/embed/tI45_FthHds" title="Podcast 2" allowfullscreen loading="lazy"></iframe>
+      </div>
+    </div>
+
   </div>
 </section>
+
+<script>
+(function () {
+  function initPodcastAnim() {
+    const targets = document.querySelectorAll('.podcast-header, .podcast-card');
+    if (!targets.length) return;
+    const obs = new IntersectionObserver((entries) => {
+      entries.forEach((e) => { if (e.isIntersecting) { e.target.classList.add('is-visible'); obs.unobserve(e.target); } });
+    }, { threshold: 0.08, rootMargin: '0px 0px -40px 0px' });
+    targets.forEach((el) => { el.classList.remove('is-visible'); obs.observe(el); });
+  }
+  window.__components = window.__components || {};
+  window.__components['podcast'] = { init: initPodcastAnim };
+})();
+</script>
